feat: Migrated App to a module monolith
Also prepared a basic implementation of the snake que of images for the homepage